--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "mongoose": "^5.2.9",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "azure-storage": "^2.10.1",
+    "dotenv": "^5.0.0",
+    "yargs": "^11.0.0"
   }
 }
