--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "azure-storage": "^2.10.1",
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
+    "dotenv": "^5.0.0",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "mongoose": "^5.2.9",
     "morgan": "~1.9.0",
-    "azure-storage": "^2.10.1",
-    "dotenv": "^5.0.0",
+    "multer": "^1.3.1",
     "yargs": "^11.0.0"
   }
 }
