--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "into-stream": "^3.1.0",
+    "lodash": "^4.17.11",
     "mongoose": "^5.2.9",
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
+    "oauth2-server": "^3.0.1",
     "yargs": "^11.0.0"
   }
 }
